syntax = "proto3";

option java_package = "com.jakub.bone.grpc";
option java_outer_classname = "AirportProto";

service AirportService {
    rpc start(StartRequest) returns (StatusResponse);
    rpc stop(StopRequest) returns (StatusResponse);
    rpc pause(PauseRequest) returns (StatusResponse);
    rpc resume(ResumeRequest) returns (StatusResponse);

    rpc getUptime(UptimeRequest) returns (UptimeResponse);
    rpc getPlanesCount(PlanesCountRequest) returns (PlanesCountResponse);
    rpc getFlightNumbers(FlightNumbersRequest) returns (FlightNumbersResponse);
    rpc getLandedPlanes(LandedPlanesRequest) returns (LandedPlanesResponse);
    rpc getPlaneRequest(PlaneRequest) returns (PlaneResponse);
    rpc getCollidedPlanes(CollidedPlanesRequest) returns (CollidedPlanesResponse);
}

message StartRequest {}
message StopRequest {}
message PauseRequest {}
message ResumeRequest {}
message UptimeRequest {}

message StatusResponse{
    string message = 1;
}

message UptimeResponse {
    string uptime = 1;
}

message PlanesCountRequest{}
message PlanesCountResponse{
    string count = 1;
}


message FlightNumbersRequest{}
message FlightNumbersResponse{
    string flight_numbers = 1;
}

message LandedPlanesRequest{}
message LandedPlanesResponse{
    string landed_planes = 1;
}

message CollidedPlanesRequest{}
message CollidedPlanesResponse{
    string collided_planes = 1;
}

message PlaneRequest{
    string flight_number = 1;
}
message PlaneResponse{
    string flight_number = 1;
    string phase = 2;
    string location = 3;
    string fuel_level = 4;
}




